--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2371,7 +2371,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/cjJDJNx.png"/>
 <!--#/#--><!--#i111.text.html:text/html-->
-<div id="i111">GANA: Increíbles premios semanalmente.</div>
+<div id="i111">GANA: Increíbles premios semanalmente acumulando puntos.</div>
 <!--#/#--><!--#i117.text.html:text/html-->
 <div id="i117">3.</div>
 <!--#/#--><!--#i109.text.html:text/html-->
@@ -2515,7 +2515,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.cheetos.com.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2584,7 +2584,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i111.text.meta:text/meta*/
-name: GANA: Increíbles premios semanalmente.; customName: false;
+name: GANA: Increíbles premios semanalmente acumulando puntos.; customName: false;
 /*#/#*//*#i111.i112.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i117.text.meta:text/meta*/
