--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2371,7 +2371,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/cjJDJNx.png"/>
 <!--#/#--><!--#i111.text.html:text/html-->
-<div id="i111">GANA: Increíbles premios semanalmente acumulando puntos.</div>
+<div id="i111">GANA: Increíbles premios semanalmente.</div>
 <!--#/#--><!--#i117.text.html:text/html-->
 <div id="i117">3.</div>
 <!--#/#--><!--#i109.text.html:text/html-->
