--- a/Falabella8/Venetian300x600.html
+++ b/Falabella8/Venetian300x600.html
@@ -2290,15 +2290,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Haz realidad tu sueño con Viajes Falabella.  ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
+<div id="i12">Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/arK9mkH.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/gOWKcgR.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/Btc8zOl.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/pd0aGyX.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/iFbQjVa.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/rcFHO8r.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i73.image.html:image/html-->
@@ -2463,18 +2463,18 @@ name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella . ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+name: Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: arK9mkH.png; fileId: ; sourceTypeId: externalUrl;
+name: gOWKcgR.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: Btc8zOl.png; fileId: ; sourceTypeId: externalUrl;
+name: pd0aGyX.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: iFbQjVa.png; fileId: ; sourceTypeId: externalUrl;
+name: rcFHO8r.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i73.image.meta:image/meta*/
