--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2283,11 +2283,11 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/MTNqcoX.jpg"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/ECdNjvV.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/0bwDyAs.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/fh5dTU9.jpg"></dataimg>
 <!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/3JWkoe5.jpg"></dataimg>
+<dataimg id="i73" src="https://i.imgur.com/5BsZByv.jpg"></dataimg>
 <!--#/#--><!--#i2.i95.slice-image.html:slice-image/html.1-->
 <dataimg id="i95" src="https://i.imgur.com/DMZAR2N.gif"></dataimg>
 <!--#/#-->
@@ -2411,12 +2411,12 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: MTNqcoX.jpg; fileId: ; sourceTypeId: externalUrl;
+name: ECdNjvV.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 0bwDyAs.jpg; fileId: ; sourceTypeId: externalUrl;
+name: fh5dTU9.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
-name: 3JWkoe5.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 5BsZByv.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i95.slice-image.meta:slice-image/meta.1*/
 name: DMZAR2N.gif; fileId: ; sourceTypeId: externalUrl;
