--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -686,11 +686,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i338.image.css:image/base/css*/
 #i338 { opacity: 1; }
 /*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
-#i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 56px;
-        -ms-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
+#i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 295px; height: 60px;
+        -ms-transform: translate(0, 0) translate(3px, 184px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(3px, 184px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(3px, 184px) rotate(0deg);
+        transform: translate(0, 0) translate(3px, 184px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -790,7 +790,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i230.image.html:image/html-->
 <img id="i230" src="https://i.imgur.com/5uUgNG2.gif"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/v7oRBxW.png"/>
+<img id="i338" src="https://i.imgur.com/oVN3cc2.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
