--- a/Falabella9/Venetian300x600.html
+++ b/Falabella9/Venetian300x600.html
@@ -2294,11 +2294,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/arK9mkH.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/gOWKcgR.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/Btc8zOl.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/pd0aGyX.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/iFbQjVa.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/rcFHO8r.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i73.image.html:image/html-->
@@ -2470,11 +2470,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: arK9mkH.png; fileId: ; sourceTypeId: externalUrl;
+name: gOWKcgR.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: Btc8zOl.png; fileId: ; sourceTypeId: externalUrl;
+name: pd0aGyX.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: iFbQjVa.png; fileId: ; sourceTypeId: externalUrl;
+name: rcFHO8r.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i73.image.meta:image/meta*/
