--- a/Falabella9/Cube.html
+++ b/Falabella9/Cube.html
@@ -941,7 +941,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/8JEx1iv.png"/>
+<img id="i130" src="https://i.imgur.com/uwCfCL6.jpg"/>
 <!--#/#--><!--#i4.i480.image.html:image/html-->
 <img id="i480" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -967,7 +967,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/gbLRHLI.png"/>
+<img id="i58" src="https://i.imgur.com/j5G2wvi.gif"/>
 <!--#/#--><!--#i5.i520.text.html:text/html-->
 <div id="i520">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Visítanos y reserva!</div>
 <!--#/#--><!--#i5.i524.text.html:text/html-->
@@ -989,7 +989,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i512.image.html:image/html-->
-<img id="i512" src="https://i.imgur.com/gbLRHLI.png"/>
+<img id="i512" src="https://i.imgur.com/oy5KlMy.jpg"/>
 <!--#/#--><!--#i6.i516.image.html:image/html-->
 <img id="i516" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i6.i518.image.html:image/html-->
