--- a/Falabella9/Venetian320x480.html
+++ b/Falabella9/Venetian320x480.html
@@ -2294,11 +2294,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/jH5yTei.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/svLapsJ.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/qugcjiE.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/RbW0Jmx.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/NB0w82j.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/ajWUUXj.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i75.image.html:image/html-->
@@ -2470,11 +2470,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: jH5yTei.png; fileId: ; sourceTypeId: externalUrl;
+name: svLapsJ.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: qugcjiE.png; fileId: ; sourceTypeId: externalUrl;
+name: RbW0Jmx.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: NB0w82j.png; fileId: ; sourceTypeId: externalUrl;
+name: ajWUUXj.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i75.image.meta:image/meta*/
