--- a/Crunch/Fijo_300x600.html
+++ b/Crunch/Fijo_300x600.html
@@ -231,7 +231,7 @@
 
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/8eOdPf1.gif" alt="" /> 
+                <img src="https://i.imgur.com/CSDsBzX.gif" alt="" /> 
                  </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
