--- a/CHEETOS/Cube.html
+++ b/CHEETOS/Cube.html
@@ -650,14 +650,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i378.text.css:text/base/css*/
+#i378 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i378.i379.positioning.css:positioning/base/css.1*/
+#i378 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 115px; height: 35px;
+        -ms-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+}
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
 #i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 54px;
-        -ms-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
-        transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(79px, 133px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(79px, 133px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(79px, 133px) rotate(0deg);
+        transform: translate(0, 0) translate(79px, 133px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -753,6 +762,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
         transform: translate(0, 0) translate(78px, 133px) rotate(0deg);
 }
+/*#/#*//*#i5.i380.text.css:text/base/css*/
+#i380 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i380.i381.positioning.css:positioning/base/css.1*/
+#i380 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 115px; height: 35px;
+        -ms-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -819,6 +837,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i6.i382.text.css:text/base/css*/
+#i382 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i382.i383.positioning.css:positioning/base/css.1*/
+#i382 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 115px; height: 35px;
+        -ms-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(117px, 40px) rotate(0deg);
 }
 /*#/#*//*#i6.i372.image.css:image/base/css*/
 #i372 { opacity: 1; }
@@ -898,7 +925,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">CREA: Monstruos con la variedad de Cheetos con tira.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/ZPLewah.jpg"/>
+<img id="i130" src="https://i.imgur.com/eP3mof5.jpg"/>
+<!--#/#--><!--#i4.i378.text.html:text/html-->
+<div id="i378">COME BIEN</div>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
 <img id="i286" src="https://i.imgur.com/Xel91bX.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -925,6 +954,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i374" src="https://i.imgur.com/i5scElM.png"/>
 <!--#/#--><!--#i5.i370.image.html:image/html-->
 <img id="i370" src="https://i.imgur.com/Xel91bX.png"/>
+<!--#/#--><!--#i5.i380.text.html:text/html-->
+<div id="i380">COME BIEN</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i342.image.html:image/html-->
@@ -943,6 +974,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i34">GANA: Increíbles premios semanalmente.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/5E3rb4G.jpg"/>
+<!--#/#--><!--#i6.i382.text.html:text/html-->
+<div id="i382">COME BIEN</div>
 <!--#/#--><!--#i6.i372.image.html:image/html-->
 <img id="i372" src="https://i.imgur.com/Xel91bX.png"/>
 <!--#/#--><!--#i6.i376.image.html:image/html-->
@@ -1267,6 +1300,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i378.text.meta:text/meta*/
+name: COME BIEN; customName: 1;
+/*#/#*//*#i378.i379.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i286.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1321,6 +1358,10 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i370.i371.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i380.text.meta:text/meta*/
+name: COME BIEN; customName: 1;
+/*#/#*//*#i380.i381.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
@@ -1355,6 +1396,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i382.text.meta:text/meta*/
+name: COME BIEN; customName: 1;
+/*#/#*//*#i382.i383.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i372.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
