--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2216,6 +2216,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i123.text.css:text/base/css*/
+#i123 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i123.i124.positioning.css:positioning/base/css.2*/
+#i123 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 124px; height: 57px;
+        -ms-transform: translate(0, 0) translate(256px, 236px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(256px, 236px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(256px, 236px) rotate(0deg);
+        transform: translate(0, 0) translate(256px, 236px) rotate(0deg);
+}
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
@@ -2238,10 +2247,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i117 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i117.i118.positioning.css:positioning/base/css.2*/
 #i117 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
-        -ms-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 394px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(29px, 393px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(29px, 393px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(29px, 393px) rotate(0deg);
+        transform: translate(0, 0) translate(29px, 393px) rotate(0deg);
 }
 /*#/#*//*#i109.text.css:text/base/css*/
 #i109 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2274,10 +2283,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
 #i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 246px; height: 150px;
-        -ms-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 319px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: AmsiProCond-Ultra; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2355,7 +2364,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/xtWWF5n.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/qzsyLl5.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/rnXea27.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2368,6 +2377,8 @@ url('fonts/') format('svg');
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/i5scElM.png"/>
+<!--#/#--><!--#i123.text.html:text/html-->
+<div id="i123">COME BIEN</div>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/cjJDJNx.png"/>
 <!--#/#--><!--#i111.text.html:text/html-->
@@ -2539,6 +2550,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i123.i124.positioning.js:positioning/base/js.2*/
+bmShow('i123');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2560,7 +2573,7 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: xtWWF5n.gif; fileId: ; sourceTypeId: externalUrl;
+name: qzsyLl5.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: rnXea27.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
@@ -2578,13 +2591,17 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i123.text.meta:text/meta*/
+name: COME BIEN; customName: false;
+/*#/#*//*#i123.i124.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
 name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i111.text.meta:text/meta*/
-name: GANA: Increíbles premios semanalmente acumulando puntos.; customName: false;
+name: GANA: Increíbles premios semanalmente.; customName: false;
 /*#/#*//*#i111.i112.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i117.text.meta:text/meta*/
