--- a/Falabella9/Venetian300x600.html
+++ b/Falabella9/Venetian300x600.html
@@ -2137,19 +2137,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(9px, 446px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 446px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 446px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 446px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 496px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2290,7 +2290,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Reserva con tan solo $742.250</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Visítanos y reserva!</div>
+<div id="i12">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2383,7 +2383,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i75.i76.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0210'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2400,7 +2400,7 @@ var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
     /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0210'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2417,7 +2417,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0210'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2434,7 +2434,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i81.i82.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0210'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/paquetes/detalle/PCN/2088157/147/1/12/2019/2#local?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=europa-en-tenis_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2463,7 +2463,7 @@ name: Reserva con tan solo $742.250; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Visítanos y reserva!; customName: false;
+name: Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
