--- a/Falabella8/Venetian320x480.html
+++ b/Falabella8/Venetian320x480.html
@@ -2134,22 +2134,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 222px; height: 47px;
-        -ms-transform: translate(0, 0) translate(49px, 364px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(49px, 364px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(49px, 364px) rotate(0deg);
-        transform: translate(0, 0) translate(49px, 364px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 215px; height: 47px;
+        -ms-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
+        transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 274px; height: 63px;
-        -ms-transform: translate(0, 0) translate(18px, 405px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(18px, 405px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(18px, 405px) rotate(0deg);
-        transform: translate(0, 0) translate(18px, 405px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 284px; height: 63px;
+        -ms-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
+        transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2164,26 +2164,26 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 356px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
 }
 /*#/#*//*#i75.image.css:image/base/css*/
 #i75 { opacity: 1; }
 /*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
 #i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 38px;
-        -ms-transform: translate(0, 0) translate(88px, 309px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(88px, 309px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(88px, 309px) rotate(0deg);
-        transform: translate(0, 0) translate(88px, 309px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(88px, 305px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(88px, 305px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(88px, 305px) rotate(0deg);
+        transform: translate(0, 0) translate(88px, 305px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 49px; height: 34px;
-        -ms-transform: translate(0, 0) translate(263px, 440px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(263px, 440px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(263px, 440px) rotate(0deg);
-        transform: translate(0, 0) translate(263px, 440px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(264px, 442px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(264px, 442px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(264px, 442px) rotate(0deg);
+        transform: translate(0, 0) translate(264px, 442px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2258,28 +2258,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
 #i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(2px, 448px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 448px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 448px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 448px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(2px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(2px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(2px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(2px, 452px) rotate(0deg);
 }
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(28px, 449px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 449px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 449px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 449px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
+        -ms-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(55px, 449px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(55px, 449px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(55px, 449px) rotate(0deg);
-        transform: translate(0, 0) translate(55px, 449px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(55px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(55px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(55px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(55px, 452px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2288,9 +2288,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Viaja a Europa desde $2.969.000</div>
+<div id="i7">Reserva tu plan a Europa y págalo a cuotas</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!</div>
+<div id="i12">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y págalo antes de viajar sin pagar intereses.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2383,7 +2383,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_europa_0209'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2400,7 +2400,7 @@ var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
     /*#i81.i82.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_europa_0209'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2417,7 +2417,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_europa_0209'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2434,7 +2434,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_europa_0209'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2459,11 +2459,11 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Viaja a Europa desde $2.969.000; customName: false;
+name: Reserva tu plan a Europa y págalo a cuotas; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Haz realidad tu sueño con Viajes Falabella. ¿Qué esperas para conocer Europa? ¡Visítanos y reserva!; customName: false;
+name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y págalo antes de viajar sin pagar intereses.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
